# laikago_quadruped_sac_trainer

./: Readme.md
Laikago-Locomotion-Gym/: MANIFEST.in  pyproject.toml  setup.py
Laikago-Locomotion-Gym/laikago_gym.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Laikago-Locomotion-Gym/laikago_locomotion/envs/: laikago_locomotion_env.py
Laikago-Locomotion-Gym/laikago_locomotion/resources/: laikago.py  plane.py
Laikago-Locomotion-Gym/tests/: gym_test.py
RL-Trainer/: ActorNetwork.py  Agent.py  CriticNetwork.py  MUJOCO_LOG.TXT  ReplayBuffer.py  ValueNetwork.py  sac_test.py  sac_train.py
RL-Trainer/model/sac/: actor_sac.data-00000-of-00001  actor_sac.index  alpha.txt  checkpoint  critic_1_sac.data-00000-of-00001  critic_1_sac.index  critic_2_sac.data-00000-of-00001  critic_2_sac.index  reward.txt  target_value_sac.data-00000-of-00001  target_value_sac.index  value_sac.data-00000-of-00001  value_sac.index
